# light

./: .gitignore  Cargo.toml  IMPLEMENTATION_QUESTIONS.md
.cargo/: config.toml
docs/: 产品需求.md  技术方案.md
openspec/changes/archive/2026-06-25-add-acceptance-validation/: README.md  acceptance.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-add-boot-sequence/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-add-event-bus/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-add-lamp-controller/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-add-led-control/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-add-light-sensor/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-add-motion-sensor/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-add-project-foundation/: README.md  (+3 more)
openspec/specs/acceptance-validation/: spec.md
openspec/specs/boot-sequence/: spec.md
openspec/specs/event-bus/: spec.md
openspec/specs/lamp-controller/: spec.md
openspec/specs/led-control/: spec.md
openspec/specs/light-sensor/: spec.md
openspec/specs/motion-sensor/: spec.md
openspec/specs/project-foundation/: spec.md
src/: config.rs  controller.rs  event.rs  main.rs  state.rs
src/drivers/: bh1750_service.rs  led_pwm.rs  mod.rs  motion_input.rs
src/tasks/: controller_task.rs  light_sensor_task.rs  mod.rs
src/utils/: fade_table.rs  log_ext.rs  mod.rs
(+8 files in other folders)
