[package]
name = "light"
version = "0.1.0"
authors = ["Liu Song <lifecyc@163.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "light"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-sys = { version = "0.37", features = ["binstart"] }
esp-idf-hal = "0.46"
esp-idf-svc = { version = "0.52.1" }
anyhow = "1"
thiserror = "1"
once_cell = "1"

[build-dependencies]
embuild = "0.33"
